--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,6 @@ workflows:
       - aws-ecs/deploy-service-update:
         requires:
           - aws-ecr/build_and_push_image
-        family: nginx-service
-        cluster-name: tester
+        family: 'nginx-service'
+        cluster-name: 'tester'
         container-image-name-updates: 'container=ui-tester,tag=${CIRCLE_SHA1}'
