--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ orbs:
   aws-ecs: circleci/aws-ecs@1.1.0
 
 workflows:
-  build:
+  build-and-deploy:
     jobs:
-      - aws-ecr/build_and_push_image:
+      - aws-ecr/build-and-push-image:
           profile-name: circleci
           repo: 259466632092.dkr.ecr.us-east-1.amazonaws.com/tester-repository
           tag: '${CIRCLE_SHA1}' 
